# tzen

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: main.py
examples/simple/: simple.py
examples/simple/so_simple/: so_simple.py  so_simple2.py
tests/: basic.py  prova.py
tests/complex/: __init__.py  docs.py
tzen/: __init__.py  __main__.py  _tz_cli.py  _tz_dep_injector.py  _tz_doc.py  _tz_injector.py  _tz_loader.py  _tz_logging.py  _tz_plugins.py  tz_cli.py  tz_conf.py  tz_constants.py  tz_doc.py  tz_facade.py  tz_fixture.py  tz_loader.py  tz_logging.py  tz_monitor.py  tz_observer.py  tz_plugins.py  tz_session.py  tz_test.py  tz_test_organizer.py  tz_tree.py  tz_types.py  tz_utils.py
tzen/plugins/: hookspecs.py
tzen/plugins/defaults/docs/: html_docs_builder.py  mkdocs_builder.py
tzen/plugins/defaults/reports/: html_session_report.py  logger_session_report.py
