[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tzen"
description = "A flexible Python test framework for RBT Testcases"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
version = "0.1.0"
authors = [
    {name = "Lorenzo Furcas", email = "furcas.lorenzo@gmail.com"}
]
keywords = ["testing", "fixtures", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "typer>=0.4.0",
    "rich>=14.0.0",
    "PyYAML>=6.0.2",
    "mkdocs>=1.6.1",
    "Jinja2>=3.1.6"
]

[project.urls]
Homepage = "https://github.com/TopFirmino/tzen"
Documentation = "https://github.com/TopFirmino/tzen"
Issues = "https://github.com/TopFirmino/tzen/issues"

[project.scripts]
tzen = "tzen.tz_cli:app"


[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39", "py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"